--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--NavBar-->
     <nav class="corSecundaria navbar navbar-expand-lg navbar-light ">
         <h4>
-          Gustavo Ariel Rossendiz
+          Gustavo Ariel 
         </h4>
         
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +49,7 @@
       <section class="jumbotron text-center corPrimaria">
         <div class="container">
           <img class="foto-perfil" src="./img/IMG_20230211_201456336_MFNR.jpg" alt="">
-          <h1 class="jumbotron-heading textoPrimario">Gustavo Ariel Rossendiz</h1>
+          <h1 class="jumbotron-heading textoPrimario">Gustavo Ariel </h1>
           <p class="lead  textoPrimario">Bacharelado de Ciência da Computação</p>
           <p>
             <a href="https://www.linkedin.com/in/gustaar/"><i class="fab fa-linkedin text-light"></i></a>
