--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       
       <section class="jumbotron text-center corPrimaria">
         <div class="container">
-          <img class="foto-perfil" src="./img/IMG_20230211_201456336_MFNR.jpg" alt="">
+          <img class="foto-perfil" src="./img/dev image.png" alt="">
           <h1 class="jumbotron-heading textoPrimario">Gustavo Ariel </h1>
           <p class="lead  textoPrimario">Bacharelado de Ciência da Computação</p>
           <p>
